Put up an example for a possible Cypress issue.

--- a/client/main.html
+++ b/client/main.html
@@ -5,8 +5,11 @@
 <body>
   <h1>Welcome to Meteor!</h1>
 
-  {{> hello}}
-  {{> info}}
+  {{> loginButtons}} {{#if currentUser}}
+  <div class="logged-in-area">I am logged in as {{ currentUser.emails.[0].address }}.</div>
+  {{else}}
+  <div class="logged-out-area">You are not logged in.</div>
+  {{/if}}
 </body>
 
 <template name="hello">
@@ -17,9 +20,17 @@
 <template name="info">
   <h2>Learn Meteor!</h2>
   <ul>
-    <li><a href="https://www.meteor.com/try" target="_blank">Do the Tutorial</a></li>
-    <li><a href="http://guide.meteor.com" target="_blank">Follow the Guide</a></li>
-    <li><a href="https://docs.meteor.com" target="_blank">Read the Docs</a></li>
-    <li><a href="https://forums.meteor.com" target="_blank">Discussions</a></li>
+    <li>
+      <a href="https://www.meteor.com/try" target="_blank">Do the Tutorial</a>
+    </li>
+    <li>
+      <a href="http://guide.meteor.com" target="_blank">Follow the Guide</a>
+    </li>
+    <li>
+      <a href="https://docs.meteor.com" target="_blank">Read the Docs</a>
+    </li>
+    <li>
+      <a href="https://forums.meteor.com" target="_blank">Discussions</a>
+    </li>
   </ul>
 </template>
